--- a/index.html
+++ b/index.html
@@ -45,34 +45,31 @@
       };
 
       const cometonics = { visible: false };
-      const messiermusics = { visible: false };
-      const bigbang = { visible: false };
-      const part2 = { visible: false };
-      /*
-        planets.push(new Planet("mercury", "m2", 2));
-        planets.push(new Planet("venus", "v2", 2));
-        planets.push(new Planet("jupiter", "j12", 0.5));
-        planets.push(new Planet("saturn", "s12", 0.5));
 
-        planets.push(new Planet("mercury", "m4", 4));
-        planets.push(new Planet("jupiter", "j14", 0.25));
-        planets.push(new Planet("saturn", "s14", 0.25));
+      const messier = {
+        clusters: { visible: false },
+        nebulas: { visible: false },
+        galaxies: { visible: false },
+        superclusters: { visible: false },
+      };
 
-        planets.push(new Planet("mercury", "m8", 8));
-        planets.push(new Planet("saturn", "s18", 1 / 8));
+      const galactic = {
+        radiogalaxies: { visible: false },
+        quasars: { visible: false },
+      };
 
-        planets.push(new Planet("venus", "v4", 4));
-        planets.push(new Planet("venus", "v8", 8));
+      const bigbang = {
+        visible: false,
+      };
 
-        */
       const r = reactive({
         time: 0,
         eventCounter: 0,
         planets,
         cometonics,
-        messiermusics,
+        messier,
+        galactic,
         bigbang,
-        part2,
       });
 
       // let t = 0;
@@ -141,28 +138,64 @@
           r.planets.saturn_s14.visible = false;
           r.eventCounter = 13;
         } else if (r.time >= sec("11:30") && r.eventCounter < 14) {
-          // Hide all planets
+          r.cometonics.visible = true;
+          r.eventCounter = 14;
+        } else if (r.time >= sec("12:00") && r.eventCounter < 15) {
+          // Messiermusics 0:00
           Object.keys(r.planets).forEach(
             (key) => (r.planets[key].visible = false)
           );
-          r.cometonics.visible = true;
-          r.eventCounter = 14;
-        } else if (r.time >= sec("15:30") && r.eventCounter < 15) {
-          r.cometonics.visible = false;
           r.eventCounter = 15;
-        } else if (r.time >= sec("15:40") && r.eventCounter < 16) {
-          r.messiermusics.visible = true;
+        } else if (r.time >= sec("15:30") && r.eventCounter < 16) {
+          // 3:30
+          r.cometonics.visible = false;
           r.eventCounter = 16;
-        } else if (r.time >= sec("25:30") && r.eventCounter < 17) {
-          r.bigbang.visible = true;
+        } else if (r.time >= sec("15:40") && r.eventCounter < 17) {
+          // 3:40
+          r.messier.clusters.visible = true;
           r.eventCounter = 17;
-        } else if (r.time >= sec("27:30") && r.eventCounter < 18) {
-          r.bigbang.visible = false;
-          r.messiermusics.visible = false;
+        } else if (r.time >= sec("16:40") && r.eventCounter < 18) {
+          // 4:40
+          r.messier.clusters.visible = false;
+          r.messier.nebulas.visible = true;
           r.eventCounter = 18;
-        } else if (r.time >= sec("28:00") && r.eventCounter < 19) {
-          r.part2.visible = true;
+        } else if (r.time >= sec("18:00") && r.eventCounter < 19) {
+          // 6:00
+          r.messier.nebulas.visible = false;
+          r.messier.clusters.visible = true;
           r.eventCounter = 19;
+        } else if (r.time >= sec("21:10") && r.eventCounter < 20) {
+          // 9:10
+          r.messier.clusters.visible = false;
+          r.messier.galaxies.visible = true;
+          r.eventCounter = 20;
+        } else if (r.time >= sec("23:50") && r.eventCounter < 21) {
+          // 11:50
+          r.messier.galaxies.visible = false;
+          r.messier.superclusters.visible = true;
+          r.eventCounter = 21;
+        } else if (r.time >= sec("25:00") && r.eventCounter < 22) {
+          // 13:00
+          r.messier.superclusters.visible = false;
+          r.galactic.radiogalaxies.visible = true;
+          r.eventCounter = 22;
+        } else if (r.time >= sec("25:30") && r.eventCounter < 23) {
+          // 13:30
+          r.bigbang.visible = true;
+          r.eventCounter = 23;
+        } else if (r.time >= sec("26:00") && r.eventCounter < 24) {
+          // 14:00
+          r.galactic.radiogalaxies.visible = false;
+          r.galactic.quasars.visible = true;
+          r.eventCounter = 24;
+        } else if (r.time >= sec("26:45") && r.eventCounter < 25) {
+          // 14:45
+          r.galactic.quasars.visible = false;
+          r.eventCounter = 25;
+        } else if (r.time >= sec("27:30") && r.eventCounter < 26) {
+          // 15:30
+          r.bigbang.visible = false;
+          r.eventCounter = 26;
         }
       };
 
@@ -175,10 +208,21 @@
         r.part2.visible = false;
       };
 
+      const exampleParticles = {
+        lifeTime: "5..100",
+        spawnRate: "200",
+        radialType: "sphere",
+        radialPosition: "0.5",
+        radialVelocity: ".1",
+        scale: ".5",
+        opacity: ".5",
+      };
+
       createApp({
         r,
         onInput,
         onReset,
+        exampleParticles,
       }).mount();
     </script>
     <script></script>
@@ -190,11 +234,11 @@
         type="range"
         v-model.number="r.time"
         @input="onInput"
-        :max="sec('28:00')"
+        :max="sec('27:30')"
         style="width: 300px"
       />
       <p style="height: 32px">
-        <button v-show="r.time == sec('28:00')" @click="onReset">
+        <button v-show="r.time == sec('27:30')" @click="onReset">
           Back to start
         </button>
       </p>
@@ -204,11 +248,13 @@
         {{ key }}
       </div>
       <div :style="{opacity: r.cometonics.visible ? 1 : 0.2}">cometonics</div>
-      <div :style="{opacity: r.messiermusics.visible ? 1 : 0.2}">
-        messiermusics
+      <div v-for="m,key in r.messier" :style="{opacity: m.visible ? 1 : 0.2}">
+        messiermusics {{ key }}
+      </div>
+      <div v-for="g,key in r.galactic" :style="{opacity: g.visible ? 1 : 0.2}">
+        galacticquasaric {{ key }}
       </div>
       <div :style="{opacity: r.bigbang.visible ? 1 : 0.2}">bigbang</div>
-      <div :style="{opacity: r.part2.visible ? 1 : 0.2}">part 2</div>
     </div>
     <a-scene
       vr-mode-ui="enabled: false"
@@ -271,37 +317,33 @@
         </a-entity>
       </a-entity>
 
-      <a-text
-        :visible="r.cometonics.visible"
-        position="0 -1 -20"
-        value="cometonics"
-        align="center"
-        animation="property: rotation; dur: 20000; to: 0 0 360; loop: true; easing: linear"
-      ></a-text>
+      <a-entity :visible="r.cometonics.visible" position="0 0 -20">
+        <a-entity :sprite-particles="exampleParticles"></a-entity>
+        <a-text value="cometonics" align="center"></a-text>
+      </a-entity>
 
-      <a-text
-        :visible="r.messiermusics.visible"
-        position="0 0 -20"
-        value="messiermusics"
-        align="center"
-        animation="property: rotation; dur: 20000; to: 0 0 360; loop: true; easing: linear"
-      ></a-text>
+      <a-entity
+        v-for="m,key,i in r.messier"
+        :visible="m.visible"
+        :position="{x: -2, y: -i + 3, z: -20}"
+      >
+        <a-entity :sprite-particles="exampleParticles"></a-entity>
+        <a-text :value="key" align="center"></a-text>
+      </a-entity>
 
-      <a-text
-        :visible="r.bigbang.visible"
-        position="0 1 -20"
-        value="bigbang"
-        align="center"
-        animation="property: rotation; dur: 20000; to: 0 0 360; loop: true; easing: linear"
-      ></a-text>
+      <a-entity
+        v-for="g,key,i in r.galactic"
+        :visible="g.visible"
+        :position="{x: 2, y: -i + 1, z: -20}"
+      >
+        <a-entity :sprite-particles="exampleParticles"></a-entity>
+        <a-text :value="key" align="center"></a-text>
+      </a-entity>
 
-      <a-text
-        :visible="r.part2.visible"
-        position="0 2 -20"
-        value="Part 2"
-        align="center"
-        animation="property: rotation; dur: 20000; to: 0 0 360; loop: true; easing: linear"
-      ></a-text>
+      <a-entity :visible="r.bigbang.visible" :position="{x: 5, y: 0, z: -20}">
+        <a-entity :sprite-particles="exampleParticles"></a-entity>
+        <a-text value="bigbang" align="center"></a-text>
+      </a-entity>
 
       <a-entity
         light="type: directional; color: #FFF; intensity: 5"
