--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <a-asset-item
           autoload
           id="nebulas"
-          src="assets/nebulas2.glb"
+          src="assets/nebulas.glb"
         ></a-asset-item>
         <a-asset-item
           autoload
